@@ -7,6 +7,8 @@
 	- in testcode, free async ids, initialise array, and check for null
 	  pointer during test of the test.  And use exit for return to note
 	  irregular program stop.
+	- Free memory leak in config strlist append.
+	- make sure nsec3 comparison salt is initialized.
 
 11 September 2018: Wouter
 	- Fixed unused return value warnings in contrib/fastrpz.patch for
